Fix alignment of ring-loader-inline inside the query-assist input
Former-commit-id: 6534f0acb2936a728edcd3b7aefb8240048b4240

--- a/components/query-assist/query-assist.scss
+++ b/components/query-assist/query-assist.scss
@@ -89,4 +89,8 @@
   svg {
     vertical-align: baseline;
   }
+
+  .ring-loader-inline {
+    top: -1px;
+  }
 }
